--- a/client/package.json
+++ b/client/package.json
@@ -1,23 +1,35 @@
 {
   "name": "swarmdeal-client",
   "version": "0.1.0",
-  "scripts": { "dev": "next dev", "build": "next build", "start": "next start" },
+  "private": true,
+
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+
   "dependencies": {
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "viem": "^1.19.3",
     "wagmi": "^1.4.7"
   },
+
   "devDependencies": {
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
+  },
+
+  "engines": {
+    "node": ">=18"
   }
 }
