--- a/Public /package.json
+++ b/Public /package.json
@@ -6,16 +6,15 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "react-scripts": "5.0.1",
+    "react-hot-toast": "^2.4.1",
+    "lucide-react": "^0.294.0",
+    "ethers": "^6.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "build": "react-scripts build"
   },
   "browserslist": {
     "production": [
@@ -24,9 +23,7 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 chrome version"
     ]
   },
   "homepage": ".",
