--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "swarmdeal-client",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "private": true,
+  "description": "AI-powered group buying platform",
   "dependencies": {
-    "axios": "^1.6.2",
-    "ethers": "^6.9.0",
-    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "axios": "^1.6.2",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1"
+    "lucide-react": "^0.294.0",
+    "ethers": "^6.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,7 +25,16 @@
     ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
-  }
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "https://swarmdeal-api.onrender.com"
 }
