--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "swarmdeal-client",
   "version": "1.0.0",
   "private": true,
-  "description": "AI-powered group buying platform",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,27 +13,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "proxy": "https://swarmdeal-api.onrender.com"
+    "build": "react-scripts build"
+  }
 }
